<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flames2"
    tools:context="com.example.android.inthewakeofgods.MainActivity">

    <LinearLayout
        android:id="@+id/result"
        style="@style/LinearLayoutResult"
        tools:context="com.example.android.inthewakeofgods.MainActivity">

        <TextView
            style="@style/TitleTextViewResultMain"
            android:text="@string/endtitle" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer1" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer2" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer3" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer4" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer5" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer6" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer7" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer8" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer9" />

        <TextView
            style="@style/TextViewResultMain"
            android:text="@string/correctAnswer10" />

        <TextView
            style="@style/TitleTextViewResultEnd"
            android:text="@string/thanks" />

    </LinearLayout>
</ScrollView>
