<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flames2"
    tools:context="com.example.android.inthewakeofgods.MainActivity">

    <RelativeLayout
        android:id="@+id/quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.inthewakeofgods.MainActivity">

        <LinearLayout style="@style/LinearLayoutQuizMain">

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question1" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/prometheus" />

            <RadioGroup style="@style/RadioGroupHorizontal">

                <RadioButton
                    android:id="@+id/q1a1"
                    style="@style/RadioButton"
                    android:text="@string/q1answer1" />

                <RadioButton
                    android:id="@+id/q1a2"
                    style="@style/RadioButton"
                    android:text="@string/q1answer2" />

                <RadioButton
                    android:id="@+id/q1a3"
                    style="@style/RadioButton"
                    android:text="@string/q1answer3" />

                <RadioButton
                    android:id="@+id/q1a4"
                    style="@style/RadioButton"
                    android:text="@string/q1answer4" />
            </RadioGroup>

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question2" />

            <EditText
                android:id="@+id/q2a"
                style="@style/EditText"
                android:hint="@string/q2hint" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/ares" />

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question3" />

            <LinearLayout style="@style/LinearLayoutHorizontal">


                <ImageView
                    android:id="@+id/imageView"
                    style="@style/ImageViewQuizwithWeight"
                    android:src="@drawable/hephaestus" />

                <RadioGroup style="@style/RadioGroupVertical">

                    <RadioButton
                        android:id="@+id/q3a1"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q3answer1" />

                    <RadioButton
                        android:id="@+id/q3a2"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q3answer2" />

                    <RadioButton
                        android:id="@+id/q3a3"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q3answer3" />

                    <RadioButton
                        android:id="@+id/q3a4"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q3answer4" />
                </RadioGroup>
            </LinearLayout>

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question4" />

            <EditText
                android:id="@+id/q4a"
                style="@style/EditText"
                android:hint="@string/q4hint" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/zeus" />

            <View
                style="@style/View"
                android:layout_width="match_parent"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question5" />

            <EditText
                android:id="@+id/q5a"
                style="@style/EditText"
                android:hint="@string/q5hint" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/aphrodite" />

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question6" />

            <LinearLayout style="@style/LinearLayoutHorizontal">


                <ImageView
                    style="@style/ImageViewQuizwithWeight"
                    android:src="@drawable/hades" />

                <RadioGroup style="@style/RadioGroupVertical">

                    <RadioButton
                        android:id="@+id/q6a1"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q6answer1" />

                    <RadioButton
                        android:id="@+id/q6a2"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q6answer2" />

                    <RadioButton
                        android:id="@+id/q6a3"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q6answer3" />

                    <RadioButton
                        android:id="@+id/q6a4"
                        style="@style/RadioButtonVertical"
                        android:text="@string/q6answer4" />
                </RadioGroup>
            </LinearLayout>

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question7" />

            <EditText
                android:id="@+id/q7a"
                style="@style/EditText"
                android:hint="@string/q7hint" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/hera" />

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question8" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/poseidon" />

            <RadioGroup style="@style/RadioGroupHorizontal">

                <RadioButton
                    android:id="@+id/q8a1"
                    style="@style/RadioButton"
                    android:text="@string/q8answer1" />

                <RadioButton
                    android:id="@+id/q8a2"
                    style="@style/RadioButton"
                    android:text="@string/q8answer2" />

                <RadioButton
                    android:id="@+id/q8a3"
                    style="@style/RadioButton"
                    android:text="@string/q8answer3" />

                <RadioButton
                    android:id="@+id/q8a4"
                    style="@style/RadioButton"
                    android:text="@string/q8answer4" />
            </RadioGroup>

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question9" />

            <LinearLayout style="@style/LinearLayoutHorizontal">


                <ImageView
                    style="@style/ImageViewQuizwithWeight"
                    android:src="@drawable/heracles" />

                <LinearLayout style="@style/LinearLayoutwithweight">


                    <CheckBox
                        android:id="@+id/q9a1"
                        style="@style/CheckBox"
                        android:text="@string/q9answer1" />

                    <CheckBox
                        android:id="@+id/q9a2"
                        style="@style/CheckBox"
                        android:text="@string/q9answer2" />

                    <CheckBox
                        android:id="@+id/q9a3"
                        style="@style/CheckBox"
                        android:text="@string/q9answer3" />

                    <CheckBox
                        android:id="@+id/q9a4"
                        style="@style/CheckBox"
                        android:text="@string/q9answer4" />

                </LinearLayout>
            </LinearLayout>

            <View
                style="@style/View"
                android:background="@drawable/flames" />


            <TextView
                style="@style/TextViewQuiz"
                android:text="@string/question10" />

            <EditText
                android:id="@+id/q10a"
                style="@style/EditText"
                android:hint="@string/q10hint" />

            <ImageView
                style="@style/ImageViewQuiz"
                android:src="@drawable/morpheus" />

            <View
                style="@style/View"
                android:background="@drawable/flames" />

            <Button
                style="@style/ButtonQuiz"
                android:onClick="checkAnswers"
                android:text="@string/submit" />

            <Button
                style="@style/ButtonQuiz"
                android:onClick="onClick"
                android:text="@string/answers" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>